--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-API_KEYS='["sk-xxxxxxxxxxxxxxxxx", "sk-xxxxxxxxxxxxxxxxx"]'
+API_KEYS='["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", "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"]'
